--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-API_KEYS='["sk-xxxxxxxxxxxxxxxxx", "sk-xxxxxxxxxxxxxxxxx"]'
+API_KEYS='["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", "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"]'
